--- a/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
+++ b/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
@@ -4,8 +4,11 @@
 > * 36.10.4. Writing Code  
 > * 36.10.5. Compiling and Linking Dynamically-Loaded Functions  
 > * 36.10.6. Composite-Type Arguments  
-> * 36.10.7. Returning Rows (Composite Types)  
-> * 36.10.8. Returning Sets  
+> * 36.10.7. Returning a Row (Composite Type)  
+>
+>   https://www.postgresql.org/docs/current/xfunc-c.html#XFUNC-C-RETURNING-ROWS
+>
+> * 36.10.8. Returning Sets (multiple rows) 
 > * 36.10.9. Polymorphic Arguments and Return Types  
 > * 36.10.10. Shared Memory  
 > * 36.10.11. LWLocks  
@@ -243,6 +246,29 @@
    And the return value should be returned using `PG_RETURN_<type>()`. To return 
    NULL, use `PG_RETURN_NULL()`.
    
+4. The C macro `PG_FUNCTION_ARGS` is defined as follows:
+
+   ```c
+   /* Standard parameter list for fmgr-compatible functions */
+   #define PG_FUNCTION_ARGS	FunctionCallInfo fcinfo
+   ```
+
+   So Postgres provides you a `fcinofo` variable within the functions using 
+   its convention, you can directly use it:
+   
+   ```c
+   PG_FUNCTION_INFO_V1(foo);
+   Datum 
+   foo(PG_FUNCTION_ARGS) 
+   {
+       printf("We have $sd arguments", fcinfo -> nargs);
+       
+       /* the rest of code */
+   }
+   ```
+   
+   This is
+   
 # 36.10.4. Writing Code
    
 1. > Always zero the bytes of your structures using memset (or allocate them 
@@ -258,4 +284,449 @@
    TIL that Rus# t won't not zero padding as well!
    
 # 36.10.6. Composite-Type Arguments
-# 36.10.7. Returning Rows (Composite Types)
+
+
+> In case you forget what are composite types, here is an example:
+>
+> ```sql
+> CREATE TYPE complex AS (
+>    r       double precision,
+>    i       double precision
+> );
+> ```
+
+1. Postgres automatically creates a composite type for every table:
+
+   ```sql
+   steve=# select typname from pg_type where typname = 'foo';
+    typname
+   ---------
+   (0 rows)
+    
+   steve=# create table foo (id int);
+   CREATE TABLE
+   steve=# select typname from pg_type where typname = 'foo';
+    typname
+   ---------
+     foo
+   (1 row)
+   ```
+
+2. When you use a table name (or a table's alias) as an argument to a function, 
+   you are not passing a string or a pointer. You are passing the **entire row** 
+   as a single, structured value. 
+   
+3. If you function takes a composite type, treat it like a row and use 
+   `PG_GETARG_HEAPTUPLEHEADER()` to extract it. Here is an example:
+   
+   ```sql
+   -- pg_ext/pg_ext--0.1.0.sql
+   
+   CREATE TYPE foo AS (
+       a INT4,
+       b INT4
+   );
+   
+   CREATE FUNCTION format_foo(foo) RETURNS text
+   AS '$libdir/pg_ext'
+   LANGUAGE C STRICT;
+   ```
+   
+   ```c
+   /* pg_ext.c */
+   
+   #include "postgres.h"
+   
+   #include "fmgr.h"
+   #include "access/htup.h"
+   #include "executor/executor.h"
+   #include <ctype.h>
+   #include <stdio.h>
+   #include <assert.h>
+   #include "utils/builtins.h"
+   
+   PG_MODULE_MAGIC;
+   
+   #define BUF_SIZE 100
+   
+   PG_FUNCTION_INFO_V1(format_foo);
+   Datum format_foo(PG_FUNCTION_ARGS) {
+       /* The first argument to this function is a composite type, we extract it using `PG_GETARG_HEAPTUPLEHEADER()` */
+       HeapTupleHeader heap_tuple_header = PG_GETARG_HEAPTUPLEHEADER(0);
+       bool a_is_null;
+       bool b_is_null;
+       int32 a;
+       int32 b;
+       char * format_buf;
+       text * ret;
+       
+       a = DatumGetInt32(GetAttributeByName(heap_tuple_header, "a", &a_is_null));
+       b = DatumGetInt32(GetAttributeByName(heap_tuple_header, "b", &b_is_null));
+       /* To simplify the impl */
+       assert(a_is_null == false);
+       assert(b_is_null == false);
+       
+       format_buf = palloc(BUF_SIZE);
+       snprintf(format_buf, BUF_SIZE, "%d, %d", a, b);
+       /* CString is not a Postgres type, `text *` is */
+       ret = cstring_to_text(format_buf);
+       /* cstring_to_text would palloc its own buffer, so we need to free our `format_buf` */ 
+       pfree(format_buf);
+       
+       PG_RETURN_TEXT_P(ret);
+   }
+   ```
+   
+   ```makefile
+   MODULES = pg_ext
+   EXTENSION = pg_ext
+   DATA = pg_ext--0.1.0.sql
+   
+   PG_CONFIG = pg_config
+   PGXS := $(shell $(PG_CONFIG) --pgxs)
+   include $(PGXS)
+   ```
+
+# 36.10.7. Returning a Row (Composite Type)
+
+> For how to return multiple rows, see the next section.
+
+Construct a `TupleDesc` using the `get_cal_return_type()` function:
+
+> the `fcinfo` argument is set by the `PG_FUNCTION_ARGS` macro:
+>
+> ```c
+> /* Standard parameter list for fmgr-compatible functions */
+> #define PG_FUNCTION_ARGS	FunctionCallInfo fcinfo
+> ```
+
+```c
+TupleDesc tuple_desc = NULL;
+
+if (get_call_result_type(fcinfo, NULL, &tuple_desc) != TYPEFUNC_COMPOSITE) {
+    ereport(ERROR, errmsg("function returning record called in context that cannot accept type record”"));
+}
+```
+
+Then we need to provide the data of the row, data can be supplied in:
+
+1. An array of `Datum` (and an array of bool values indicating if the fields are NULL)
+
+   ```c
+   tuple_desc = BlessTupleDesc(tuple_desc);
+   
+   Datum values[2];
+   bool is_nulls[2] = { false, false };
+   values[0] = Int32GetDatum(1);
+   values[1] = Int32GetDatum(2);
+   ```
+   
+2. An array of cstring (set NULL fields to NULL pointers)
+
+   ```c
+   AttInMetadata * attinmeta = TupleDescGetAttInMetadata(tupdesc);
+   char ** values = { "1", "2" };
+   ```
+   
+
+Then construct `HeapTuple` 
+
+1. If you use Datum
+
+   ```c
+   HeapTuple tuple = heap_form_tuple(tuple_desc, values, is_nulls);
+   ```
+   
+2. If you use cstring
+
+   ```c
+   HeapTuple tuple = BuildTupleFromCStrings(attinmeta, values);
+   ```
+
+Return the row:
+
+```c
+PG_RETURN_HEAPTUPLEHEADER(tuple->t_data);
+```
+
+Here is a complete implementation:
+
+```c
+#include <ctype.h>
+#include <stdio.h>
+
+#include "postgres.h"
+
+#include "fmgr.h"
+#include "access/htup.h"
+#include "access/tupdesc.h"
+#include "executor/executor.h"
+#include "utils/builtins.h"
+#include "funcapi.h"
+#include "utils/elog.h"
+
+PG_MODULE_MAGIC;
+
+
+PG_FUNCTION_INFO_V1(return_composite);
+Datum
+return_composite(PG_FUNCTION_ARGS)
+{
+    TupleDesc tuple_desc = NULL;
+    HeapTuple       tuple;
+    
+    if (get_call_result_type(fcinfo, NULL, &tuple_desc) != TYPEFUNC_COMPOSITE) {
+        ereport(ERROR, errmsg("function returning record called in context that cannot accept type record”"));
+    }
+    
+    Datum values[2];
+    bool is_nulls[2] = { false, false };
+    tuple_desc = BlessTupleDesc(tuple_desc);
+    values[0] = Int32GetDatum(1);
+    values[1] = Int32GetDatum(2);
+    tuple = heap_form_tuple(tuple_desc, values, is_nulls);
+    
+    /*
+     *  If you want to work with `cstring`s
+     *  
+     *  char ** values = { "1", "2" };
+     *  AttInMetadata * attinmeta = TupleDescGetAttInMetadata(tupdesc);
+     *  tuple = BuildTupleFromCStrings(attinmeta, values);
+     */
+    
+    PG_RETURN_HEAPTUPLEHEADER(tuple->t_data);
+}
+```
+
+# 36.10.8. Returning Sets (multiple rows)
+
+1. There are 2 modes to return multiple rows in C functions:
+
+   > This is similar to how database execution works:
+   >
+   > 1. Pipelining (Iterator model/volcano model)
+   > 2. Materialization
+   
+   1. ValuePerCall mode
+   
+   > I would call this **iterator** mode
+   
+   The set-returing function (SRF) returns 1 row per function call, just like 
+   `Iterator::next()`, when it yieldds all the values, return `NULL`.
+   
+   NOTE that when using this mode, the iterator could not yield all the values
+   due to the use of `LIMIT`:
+   
+   ```sql
+   select * from your_func_return_10_rows() limit 1;
+   ```
+   
+   If you do resource cleanup ONLY in the last SRF call, this cleanup procedure
+   could never happen. For such cases, it is recommended to use the Materialize
+   mode.
+   
+   2. Materialize mode
+   
+   All the rows will be returned together in 1 set-returing call.
+   
+    
+2. Where to store your iterator cursor state when using the ValuePerCall mode
+   `FuncCallContext`
+   
+   How to access it: `fcinfo -> flinof -> fn_extra` is a pointer to it
+   
+   ```
+   typedef struct FunctionCallInfoBaseData
+   {
+	   FmgrInfo   *flinfo;			/* ptr to lookup info used for this call */
+				
+   typedef struct FmgrInfo
+   {
+    PGFunction	fn_addr;		/* pointer to function or handler to be called */
+   	Oid			fn_oid;			/* OID of function (NOT of handler, if any) */
+   	short		fn_nargs;		/* number of input args (0..FUNC_MAX_ARGS) */
+   	bool		fn_strict;		/* function is "strict" (NULL in => NULL out) */
+   	bool		fn_retset;		/* function returns a set */
+   	unsigned char fn_stats;		/* collect stats if track_functions > this */
+   	void	   *fn_extra;		/* extra space for use by handler */
+   ```
+   
+3. Postgres provides various macros to implement set-returning functions using 
+   the ValuePerCall mode, here is an example that implements `sequence(n)`, a
+   function that prints `[0, n)`:
+   
+   ```c
+   #include <ctype.h>
+   #include <stdio.h>
+   
+   #include "postgres.h"
+   
+   #include "fmgr.h"
+   #include "access/htup.h"
+   #include "access/tupdesc.h"
+   #include "executor/executor.h"
+   #include "utils/builtins.h"
+   #include "funcapi.h"
+   #include "utils/elog.h"
+   
+   PG_MODULE_MAGIC;
+   
+   
+   PG_FUNCTION_INFO_V1(sequence);
+   Datum
+   sequence(PG_FUNCTION_ARGS)
+   {
+       int32 n; /* intput argument */
+       Datum ret; /* return value */
+       int32 call_count; /* how many numbers has this function been called */
+       FuncCallContext * func_call_ctx; /* SRF call context */
+       
+       
+       n = PG_GETARG_INT32(0);
+       
+       /* Use this to check if it is the first invocation of this function  */
+       if (SRF_IS_FIRSTCALL()) {
+           /* We need to init the FuncCallContext on first call */
+           func_call_ctx = SRF_FIRSTCALL_INIT();
+       }
+       
+       /* Set up the FuncCallContext, needed for every time, no idea why */
+       func_call_ctx = SRF_PERCALL_SETUP();
+       
+       call_count = (int32)func_call_ctx -> call_cntr;
+       
+       if (call_count < n) {
+           ret = Int32GetDatum(call_count);
+           
+           /* Return Some(ret) */
+           SRF_RETURN_NEXT(func_call_ctx, ret);
+       } else {
+           /* Return None */
+           SRF_RETURN_DONE(func_call_ctx);
+       }
+   }
+   ```
+   
+   ```sql
+   -- NOTE that the return value has been changed to `SETOF INT4`
+   CREATE FUNCTION sequence(INT4) RETURNS SETOF INT4
+   AS '$libdir/pg_ext'
+   LANGUAGE C STRICT;
+   ```
+   
+4. Postgres creates a Transient `MemoryContext` for every function call.
+
+   For SRF that would be called multiple times, this applies as well. So, if your
+   state needs to be preseved across multiple SRF calls, use `multi_call_memory_ctx`.
+   
+   ```c
+   typedef struct FuncCallContext
+   {
+        /* Other fields are omitted */
+        
+    	/*
+    	 * memory context used for structures that must live for multiple calls
+    	 *
+    	 * multi_call_memory_ctx is set by SRF_FIRSTCALL_INIT() for you, and used
+    	 * by SRF_RETURN_DONE() for cleanup. It is the most appropriate memory
+    	 * context for any memory that is to be reused across multiple calls of
+    	 * the SRF.
+    	 */
+    	MemoryContext multi_call_memory_ctx;
+    
+   } FuncCallContext;  
+   ```
+    
+   To do so, switch to this `multi_call_memory_ctx` when SRF gets called the first
+   time:
+   
+   ```c
+   MemoryContext * old_context = MemoryContextSwitchTo(func_call_ctx -> multi_call_memory_ctx);
+   ```
+   
+   Switching to a long-livedd `MemoryContext` ensures your state won't get lost, 
+   but where to store the pointer:
+   
+   ```c
+   typedef struct FuncCallContext
+   {
+    	/*
+    	 * OPTIONAL pointer to miscellaneous user-provided context information
+    	 *
+    	 * user_fctx is for use as a pointer to your own struct to retain
+    	 * arbitrary context information between calls of your function.
+    	 */
+    	void	   *user_fctx;
+   } FuncCallContext;
+   ```
+   
+   So, here is an updated version of the `sequence(INT4)` implementation that 
+   demostrates this, instead of relying on `func_call_ctx -> call_cntr`, we now
+   store the invocation count in our own `State`:
+   
+   ```c
+   #include <ctype.h>
+   #include <stdio.h>
+   
+   #include "postgres.h"
+   
+   #include "fmgr.h"
+   #include "funcapi.h"
+   
+   PG_MODULE_MAGIC;
+   
+   /*
+   * Our custom state that should survive multiple SNF calls.
+   */
+   typedef struct {
+       /* How many types our SNF has been invoked */
+       int32 snf_call_count;
+   } State;
+   
+   
+   PG_FUNCTION_INFO_V1(sequence);
+   Datum
+   sequence(PG_FUNCTION_ARGS)
+   {
+       int32 n; /* intput argument */
+       Datum ret; /* return value */
+       int32 * call_count_p; 
+       FuncCallContext * func_call_ctx; /* SRF call context */
+       State * state;
+       
+       n = PG_GETARG_INT32(0);
+       
+       if (SRF_IS_FIRSTCALL()) {
+           func_call_ctx = SRF_FIRSTCALL_INIT();
+           /* Switch to the context that would survive multiple calls */
+           MemoryContextSwitchTo(func_call_ctx->multi_call_memory_ctx);
+   
+           /* Then store our state there */
+           state = palloc0(sizeof(State));
+           state->snf_call_count = 0;
+           func_call_ctx->user_fctx = (void *)state;
+       }
+       
+       /* Needed for every time, no idea why */
+       func_call_ctx = SRF_PERCALL_SETUP();
+       
+       call_count_p = &((State *)func_call_ctx->user_fctx)->snf_call_count;
+       
+       if (*call_count_p < n) {
+           ret = Int32GetDatum(*call_count_p);
+           (*call_count_p) += 1;
+           
+           SRF_RETURN_NEXT(func_call_ctx, ret);
+       } else {
+           SRF_RETURN_DONE(func_call_ctx);
+       }
+   }
+   ```
+   
+   WARNING: the objects stored in `func_call_ctx -> user_fctx` should all be 
+   allocated in the `multi_call_memory_ctx`, if you store anything allocated
+   in the transient context, you have a dangling pointer.
+   
+```c
+
+```
