--- a/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
+++ b/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
@@ -62,7 +62,7 @@
    > functions when the function name in the C language source code is not the 
    > same as the name of the SQL function. The string `obj_file` is the name of 
    > the shared library file containing the compiled C function, and is interpreted 
-   > as for the LOAD command. 
+   > as for the [LOAD](https://www.postgresql.org/docs/current/sql-load.html) command. 
    >
    > The string `link_symbol` is the function's link symbol, that is, the name 
    > of the function in the C language source code. If the link symbol is omitted, 
@@ -91,6 +91,9 @@
 
 3. There is currently no way to unload a loaded shared object unless you re-open a
    new session.
+   
+   > "session" means a `psql` connection, i.e., a connetion to the backend 
+   > `postgres` process, its lifetime.
 
 4. Every dynamic shared object can have an init function:
 
@@ -109,7 +112,7 @@
 
    1. pass by value, fixed-length
    
-      The maximum size of this kind is the pointer size.
+      The maximum size of this kind of type is the pointer size.
    
    2. pass by reference, fixed-length
    
@@ -128,7 +131,7 @@
       It is required that the first 4 bytes (first field, C compiler won't 
       reorder fields) should be the **total** length of  this variable type 
       (including the 4 bytes). For example, here is how the `Vector` type 
-      gets defined in `pgvector`:
+      is defined in `pgvector`:
    
       ```c
       typedef struct Vector
@@ -141,7 +144,7 @@
       ```
       
       These 4 bytes should not be modified manually, we should always set it via
-      the `SET_VARSIZE` macro.
+      the `SET_VARSIZE(pointer_to_struct, size)` macro.
       
       There is a constant `VARHDRSZ` to represent the varlen header size.
       
@@ -194,7 +197,7 @@
    Datum your_func(PG_FUNCTION_ARGS);
    ```
    
-   And you should write this macro `PG_FUNCTION_INFO_V1(your_func);` right before 
+   And you should write this macro `PG_FUNCTION_INFO_V1(your_func);` right above 
    this funtion, so:
    
    
@@ -220,7 +223,7 @@
    
 2. Extract arguments 
 
-   You can extract the arguments using any above macro. Be sure that the argument
+   You can extract the arguments using any following macros. Be sure that the argument
    is NOT null, then invoke the macro. You can check this using `PG_ARGISNULL()`. 
    Or this can be omitted if the function is declared as `STRICT` (NULL input 
    results in NULL output, Postgres handles  this for you automatically).
@@ -281,12 +284,12 @@
    if logically-equivalent values aren't bitwise equal.
    
    
-   TIL that Rus# t won't not zero padding as well!
+   TIL that Rust won't not zero padding as well!
    
 # 36.10.6. Composite-Type Arguments
 
 
-> In case you forget what are composite types, here is an example:
+> In case you forget what composite types are, here is an example:
 >
 > ```sql
 > CREATE TYPE complex AS (
@@ -305,6 +308,7 @@
     
    steve=# create table foo (id int);
    CREATE TABLE
+   
    steve=# select typname from pg_type where typname = 'foo';
     typname
    ---------
@@ -315,6 +319,10 @@
 2. When you use a table name (or a table's alias) as an argument to a function, 
    you are not passing a string or a pointer. You are passing the **entire row** 
    as a single, structured value. 
+   
+   ```sql
+   SELECT my_func(t) FROM t;
+   ```
    
 3. If you function takes a composite type, treat it like a row and use 
    `PG_GETARG_HEAPTUPLEHEADER()` to extract it. Here is an example:
@@ -408,7 +416,7 @@ if (get_call_result_type(fcinfo, NULL, &tuple_desc) != TYPEFUNC_COMPOSITE) {
 }
 ```
 
-Then we need to provide the data of the row, data can be supplied in:
+Then we need to provide the data of the row, data can be supplied in 2 ways:
 
 1. An array of `Datum` (and an array of bool values indicating if the fields are NULL)
 
@@ -449,7 +457,7 @@ Return the row:
 PG_RETURN_HEAPTUPLEHEADER(tuple->t_data);
 ```
 
-Here is a complete implementation:
+Here is the complete implementation:
 
 ```c
 #include <ctype.h>
@@ -501,39 +509,108 @@ return_composite(PG_FUNCTION_ARGS)
 # 36.10.8. Returning Sets (multiple rows)
 
 1. There are 2 modes to return multiple rows in C functions:
-
+   
+   1. ValuePerCall mode
+   
+      > I would call this **iterator** mode
+   
+      The set-returing function (SRF) returns 1 row per function call, just like 
+      `Iterator::next()`, when it yields all the values, return `DONE`.
+        
+      NOTE that when using this mode, the iterator could not yield all the values
+      due to the use of `LIMIT`:
+        
+      ```sql
+      select * from your_func_return_10_rows() limit 1;
+      ```
+        
+      If you do resource cleanup ONLY in the last SRF call, this cleanup procedure
+      could never happen. For such cases, it is recommended to use the Materialize
+      mode.
+   
+   2. Materialize mode
+   
+      All the rows will be returned together in 1 set-returing call.
+   
    > This is similar to how database execution works:
    >
    > 1. Pipelining (Iterator model/volcano model)
    > 2. Materialization
-   
-   1. ValuePerCall mode
-   
-   > I would call this **iterator** mode
-   
-   The set-returing function (SRF) returns 1 row per function call, just like 
-   `Iterator::next()`, when it yieldds all the values, return `NULL`.
-   
-   NOTE that when using this mode, the iterator could not yield all the values
-   due to the use of `LIMIT`:
-   
-   ```sql
-   select * from your_func_return_10_rows() limit 1;
-   ```
-   
-   If you do resource cleanup ONLY in the last SRF call, this cleanup procedure
-   could never happen. For such cases, it is recommended to use the Materialize
-   mode.
-   
-   2. Materialize mode
-   
-   All the rows will be returned together in 1 set-returing call.
-   
     
 2. Where to store your iterator cursor state when using the ValuePerCall mode
    `FuncCallContext`
    
-   How to access it: `fcinfo -> flinof -> fn_extra` is a pointer to it
+   ```c
+   /*-------------------------------------------------------------------------
+   *		Support struct to ease writing Set Returning Functions (SRFs)
+   *-------------------------------------------------------------------------
+   *
+   * This struct holds function context for Set Returning Functions.
+   * Use fn_extra to hold a pointer to it across calls
+   */
+   typedef struct FuncCallContext
+   {
+    	/*
+    	 * Number of times we've been called before
+    	 *
+    	 * call_cntr is initialized to 0 for you by SRF_FIRSTCALL_INIT(), and
+    	 * incremented for you every time SRF_RETURN_NEXT() is called.
+    	 */
+    	uint64		call_cntr;
+    
+    	/*
+    	 * OPTIONAL maximum number of calls
+    	 *
+    	 * max_calls is here for convenience only and setting it is optional. If
+    	 * not set, you must provide alternative means to know when the function
+    	 * is done.
+    	 */
+    	uint64		max_calls;
+    
+    	/*
+    	 * OPTIONAL pointer to miscellaneous user-provided context information
+    	 *
+    	 * user_fctx is for use as a pointer to your own struct to retain
+    	 * arbitrary context information between calls of your function.
+    	 */
+    	void	   *user_fctx;
+    
+    	/*
+    	 * OPTIONAL pointer to struct containing attribute type input metadata
+    	 *
+    	 * attinmeta is for use when returning tuples (i.e. composite data types)
+    	 * and is not used when returning base data types. It is only needed if
+    	 * you intend to use BuildTupleFromCStrings() to create the return tuple.
+    	 */
+    	AttInMetadata *attinmeta;
+    
+    	/*
+    	 * memory context used for structures that must live for multiple calls
+    	 *
+    	 * multi_call_memory_ctx is set by SRF_FIRSTCALL_INIT() for you, and used
+    	 * by SRF_RETURN_DONE() for cleanup. It is the most appropriate memory
+    	 * context for any memory that is to be reused across multiple calls of
+    	 * the SRF.
+    	 */
+    	MemoryContext multi_call_memory_ctx;
+    
+    	/*
+    	 * OPTIONAL pointer to struct containing tuple description
+    	 *
+    	 * tuple_desc is for use when returning tuples (i.e. composite data types)
+    	 * and is only needed if you are going to build the tuples with
+    	 * heap_form_tuple() rather than with BuildTupleFromCStrings(). Note that
+    	 * the TupleDesc pointer stored here should usually have been run through
+    	 * BlessTupleDesc() first.
+    	 */
+    	TupleDesc	tuple_desc;
+    
+   } FuncCallContext;
+   ```
+   
+   Helper macro `SRF_FIRSTCALL_INIT()` will allocate `FuncCallContext` and store
+   the pointer here `fcinfo -> flinof -> fn_extra`, then it returns the pointer
+   to you so that you can assign it to your local variable.
    
    ```
    typedef struct FunctionCallInfoBaseData
@@ -600,6 +677,8 @@ return_composite(PG_FUNCTION_ARGS)
            
            /* Return Some(ret) */
            SRF_RETURN_NEXT(func_call_ctx, ret);
+           
+           /* There is also a SRF_RETURN_NEXT_NULL(func_call_ctx) that yields a NULL in this iteration */
        } else {
            /* Return None */
            SRF_RETURN_DONE(func_call_ctx);
@@ -614,10 +693,11 @@ return_composite(PG_FUNCTION_ARGS)
    LANGUAGE C STRICT;
    ```
    
-4. Postgres creates a Transient `MemoryContext` for every function call.
+4. Postgres creates a transient `MemoryContext` for every function call.
 
-   For SRF that would be called multiple times, this applies as well. So, if your
-   state needs to be preseved across multiple SRF calls, use `multi_call_memory_ctx`.
+   SRF would be called multiple times, this rule applies as well. So, if your
+   state needs to be preseved across multiple SRF calls, you use use a long-lived 
+   `MemoryContext` `multi_call_memory_ctx`.
    
    ```c
    typedef struct FuncCallContext
@@ -637,15 +717,18 @@ return_composite(PG_FUNCTION_ARGS)
    } FuncCallContext;  
    ```
     
-   To do so, switch to this `multi_call_memory_ctx` when SRF gets called the first
-   time:
+   To do so, before allocating anything that needs to be long-lived, switch to 
+   this `multi_call_memory_ctx`. Typically, when writing SRF, you state needs
+   to be allocated in the first call, so you would switch to this memory context
+   in the first call.
    
    ```c
    MemoryContext * old_context = MemoryContextSwitchTo(func_call_ctx -> multi_call_memory_ctx);
    ```
    
-   Switching to a long-livedd `MemoryContext` ensures your state won't get lost, 
-   but where to store the pointer:
+   The long-lived memory context will go away when all the SRF calls end.
+   
+5. Your long-lived state ('s pointer) should be stored in `FuncCallContext.user_fctx`
    
    ```c
    typedef struct FuncCallContext
@@ -705,6 +788,11 @@ return_composite(PG_FUNCTION_ARGS)
            state = palloc0(sizeof(State));
            state->snf_call_count = 0;
            func_call_ctx->user_fctx = (void *)state;
+           
+           /* 
+            * Now we can actually switch back to the old context as State is 
+            * only thing that needs to be long-lived
+            */ 
        }
        
        /* Needed for every time, no idea why */
@@ -727,6 +815,4 @@ return_composite(PG_FUNCTION_ARGS)
    allocated in the `multi_call_memory_ctx`, if you store anything allocated
    in the transient context, you have a dangling pointer.
    
-```c
-
-```
+# 36.10.9. Polymorphic Arguments and Return Types
