--- a/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
+++ b/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
@@ -186,7 +186,7 @@
 
 # 36.10.3. Version 1 Calling Conventions 
 
-> This is currently the only calling convention Postgres has
+> This is currently the only calling convention that Postgres has
 
 1. Function signature
 
@@ -219,6 +219,48 @@
    
        PG_RETURN_INT32(arg + 1);
    }
+   ```
+   
+   What does that `PG_FUNCTION_INFO_V1` macro do?
+   
+   ```c 
+   /*
+    *	Macro to build an info function associated with the given function name.
+    *
+    *	As a convenience, also provide an "extern" declaration for the given
+    *	function name, so that writers of C functions need not write that too.
+    *
+    *	On Windows, the function and info function must be exported.  Our normal
+    *	build processes take care of that via .DEF files or --export-all-symbols.
+    *	Module authors using a different build process might need to manually
+    *	declare the function PGDLLEXPORT.  We do that automatically here for the
+    *	info function, since authors shouldn't need to be explicitly aware of it.
+    */
+   #define PG_FUNCTION_INFO_V1(funcname) \
+   
+   // Comment by steve: This declares our C function
+   extern PGDLLEXPORT Datum funcname(PG_FUNCTION_ARGS); \
+   
+   // Comment by steve: This declares a function called `pg_finfo_<our function>`
+   extern PGDLLEXPORT const Pg_finfo_record * CppConcat(pg_finfo_,funcname)(void); \
+   
+   // Comment by steve: This defines the `pg_finfo_<our function>` function, which
+   // tells the calling concontion version of our function
+   const Pg_finfo_record * \
+   CppConcat(pg_finfo_,funcname) (void) \
+   { \
+    	static const Pg_finfo_record my_finfo = { 1 }; \
+    	return &my_finfo; \
+   } \
+   
+   // Comment by steve: A clever little trick to enforce that you won't miss the 
+   // tailing semicolon after `PG_FUNCTION_INFO_V1(<our function>);`. This line 
+   // doesn't do anything meaningful on its own, but it's not a complete statement. 
+   // 
+   // If you forget the semicolon after PG_FUNCTION_INFO_V1(...), this dangling 
+   // declaration will cause the compiler to complain about a syntax error, reminding 
+   // you to add the semicolon.
+   extern int no_such_variable
    ```
    
 2. Extract arguments 
@@ -270,7 +312,20 @@
    }
    ```
    
-   This is
+5. SQL supports function overloading:
+
+   ```sql
+   CREATE FUNCTION add_one(integer) RETURNS integer
+       AS 'DIRECTORY/funcs', 'add_one'
+       LANGUAGE C STRICT;
+   
+   -- note overloading of SQL function name "add_one"
+   CREATE FUNCTION add_one(double precision) RETURNS double precision
+       AS 'DIRECTORY/funcs', 'add_one_float8'
+       LANGUAGE C STRICT;
+   ```
+   
+   >  See section "36.10.9. Polymorphic Arguments and Return Types" as well.
    
 # 36.10.4. Writing Code
    
@@ -816,3 +871,19 @@ return_composite(PG_FUNCTION_ARGS)
    in the transient context, you have a dangling pointer.
    
 # 36.10.9. Polymorphic Arguments and Return Types
+
+1. The type of the arguments and return value of a polymorphic function is 
+   dynamic, we need to determine it at runtime:
+   
+   1. `Oid get_fn_expr_argtype(FmgrInfo *flinfo, int argnum)`
+   
+   2. `Oid get_fn_expr_rettype(FmgrInfo *flinfo)`
+   
+   These 2 functions are defined in `fmgr.h`, they both return `InvalidOid` if
+   the type information if not available. 
+   
+   > For `get_fn_expr_argtype()`, if the specified `argnum` is out of bounds, 
+   > `InvalidOid` will be returned. If you simply supply a string literal or NULL
+   > without providing any type information, Postgres parser cannot infer the type 
+   > for you, it will complain before function `get_fn_expr_argtype()` gets called.
+   
