--- a/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
+++ b/database/Postgres/pg17_docs/Ch36_Extending_SQL/36.10_C_Language_Functions.md
@@ -11,6 +11,8 @@
 > * 36.10.8. Returning Sets (multiple rows) 
 > * 36.10.9. Polymorphic Arguments and Return Types  
 > * 36.10.10. Shared Memory  
+>   * 36.10.10.1. Requesting Shared Memory at Startup
+>   * 36.10.10.2. Requesting Shared Memory After Startup
 > * 36.10.11. LWLocks  
 > * 36.10.12. Custom Wait Events  
 > * 36.10.13. Injection Points  
@@ -98,7 +100,7 @@
 4. Every dynamic shared object can have an init function:
 
    ```c
-   void _PG_init() {
+   void _PG_init(void) {
        /* impl here */
    }
    ```
@@ -434,6 +436,10 @@
        /* CString is not a Postgres type, `text *` is */
        ret = cstring_to_text(format_buf);
        /* cstring_to_text would palloc its own buffer, so we need to free our `format_buf` */ 
+       //
+       // Update: Postgres allocates a transient MemoryContext for every C 
+       // function, which will be dropped when the invocation ends, so you don't need to
+       // manually pfree() the memory.
        pfree(format_buf);
        
        PG_RETURN_TEXT_P(ret);
@@ -592,8 +598,8 @@ return_composite(PG_FUNCTION_ARGS)
    > 1. Pipelining (Iterator model/volcano model)
    > 2. Materialization
     
-2. Where to store your iterator cursor state when using the ValuePerCall mode
-   `FuncCallContext`
+2. Where to store your iterator cursor state when using the ValuePerCall 
+   mode: `FuncCallContext`
    
    ```c
    /*-------------------------------------------------------------------------
@@ -667,7 +673,7 @@ return_composite(PG_FUNCTION_ARGS)
    the pointer here `fcinfo -> flinof -> fn_extra`, then it returns the pointer
    to you so that you can assign it to your local variable.
    
-   ```
+   ```c
    typedef struct FunctionCallInfoBaseData
    {
 	   FmgrInfo   *flinfo;			/* ptr to lookup info used for this call */
@@ -870,6 +876,78 @@ return_composite(PG_FUNCTION_ARGS)
    allocated in the `multi_call_memory_ctx`, if you store anything allocated
    in the transient context, you have a dangling pointer.
    
+6. An example that combines composite type return value and SRF:
+
+   ```c
+   #include <ctype.h>
+   #include <stdio.h>
+   #include <stdint.h>
+   
+   #include "postgres.h"
+   
+   #include "fmgr.h"
+   #include "funcapi.h"
+   
+   PG_MODULE_MAGIC;
+   
+   PG_FUNCTION_INFO_V1(tuple_sequence);
+   Datum
+   tuple_sequence(PG_FUNCTION_ARGS)
+   {
+       uint64 n;
+       int32 opt_n;
+       FuncCallContext * func_call_ctx;
+       TupleDesc tuple_desc;
+       HeapTuple heap_tuple;
+       Datum values[2];
+       bool is_nulls[2] = { false, false };
+       uint64 index;
+       Datum tuple_datum;
+   
+       opt_n = PG_GETARG_INT32(0);
+       if (opt_n  < 0 )  {
+           ereport(ERROR, errmsg("function [%s] only accepts positive number", __func__));
+       } else {
+           /* the cast here is safe as opt_n is positive */
+           n = (uint64)opt_n;
+       }
+       if (get_call_result_type(fcinfo, NULL, &tuple_desc) != TYPEFUNC_COMPOSITE) {
+           ereport(ERROR, errmsg("function returning record called in context that cannot accept type record”"));
+       }
+   
+   
+       if (SRF_IS_FIRSTCALL()) {
+           func_call_ctx = SRF_FIRSTCALL_INIT();
+       }
+   
+       func_call_ctx = SRF_PERCALL_SETUP();
+   
+       index = func_call_ctx -> call_cntr;
+       if (index < n) {
+           values[0] = UInt64GetDatum(index);
+           values[1] = UInt64GetDatum(index);
+           tuple_desc = BlessTupleDesc(tuple_desc);
+           heap_tuple = heap_form_tuple(tuple_desc, values, is_nulls);
+           tuple_datum = HeapTupleHeaderGetDatum(heap_tuple->t_data);
+   
+           SRF_RETURN_NEXT(func_call_ctx, tuple_datum);
+       } else {
+           SRF_RETURN_DONE(func_call_ctx);
+       }
+   }
+   ```
+
+   ```sql
+   CREATE type foo as (
+       a int4,
+       b int4
+   );
+    
+   CREATE FUNCTION tuple_sequence(n int4) RETURNS SETOF foo
+   AS '$libdir/x'
+   LANGUAGE C STRICT;
+   ```
+   
 # 36.10.9. Polymorphic Arguments and Return Types
 
 1. The type of the arguments and return value of a polymorphic function is 
@@ -879,6 +957,10 @@ return_composite(PG_FUNCTION_ARGS)
    
    2. `Oid get_fn_expr_rettype(FmgrInfo *flinfo)`
    
+       > You can use `get_call_result_type(fcinfo, ptr_to_Oid, ptr_to_TupleDesc)`
+       > as an alternative to `get_fn_expr_rettype()` since it will return the 
+       > `Oid` as well when the return type is a scalar type.
+   
    These 2 functions are defined in `fmgr.h`, they both return `InvalidOid` if
    the type information if not available. 
    
@@ -887,3 +969,52 @@ return_composite(PG_FUNCTION_ARGS)
    > without providing any type information, Postgres parser cannot infer the type 
    > for you, it will complain before function `get_fn_expr_argtype()` gets called.
    
+   
+2. Polymorphic types other than `"any"` have to be same tyep:
+
+   ```sql
+   CREATE FUNCTION foo(a anyelement, b anyelement) RETURNS void;
+   ```
+   
+   `a` and `b` have to be of the same type.
+   
+
+# 36.10.10. Shared Memory  
+
+## 36.10.10.1. Requesting Shared Memory at Startup
+
+1. Extensions can request shared memory on server startup, to do so:
+
+   1. the shared object has to be configured in `shared_preload_libraries` so 
+      that server will load it on startup.
+      
+      > You have to edit your `$PGDATA/postgresql.conf`
+      
+   2. Every extension has a `void shmem_request_hook()` hook where one can request
+      the needed memory by calling `void RequestAddinShmemSpace(Size size)`. You
+      should write your own `shmem_request_hook` and call `RequestAddinShmemSpace()`
+      there.
+      
+      ```c
+      void my_extension_shmem_request_hook(void) {
+          RequestAddinShmemSpace(<size>); 
+      }
+      ```
+
+   3. Set up the hook in `_PG_init()`:
+   
+      ```c
+      shmem_request_hook = my_extension_shmem_request_hook;
+      
+      /* Or you can use:
+       * 
+       * shmem_request_hook = &my_extension_shmem_request_hook;
+       *
+       * Both &my_extension_shmem_request_hook and my_extension_shmem_request_hook
+       * resolve to the address of our custom request hook function. (I don't quite 
+       * love this C feature)
+       */
+      ```
+      
+
+## 36.10.10.2. Requesting Shared Memory After Startup
